runtime issues fixed